# LiLBrain

./: .gitignore  LICENSE  README.md  pyproject.toml
ezgraph/: __init__.py  __main__.py  server.py
lilbrain/: __init__.py  __main__.py  server.py
